fix alignment of inputs

--- a/ttkd_ui/app/app.scss
+++ b/ttkd_ui/app/app.scss
@@ -59,6 +59,10 @@ $icon-font-path: "./lib/bootstrap-sass/assets/fonts/bootstrap/";
 	margin-bottom: 35px;
 }
 
+.fill-container {
+	width: 100%;
+}
+
 .normal-text {
 	font-weight: normal;
 }
